# cam-motion-alert

./: .gitignore  config.py  detector.py  main.py  notifier.py  preprocessing.py  pyproject.toml  snapshots.py
cam_motion_alert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
